--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ development:
   database: clear_price_dev
   pool: 5
   timeout: 5000
-  socket: /tmp/mysql.sock
-
+#  socket: /tmp/mysql.sock
+  socket: /var/run/mysqld/mysqld.sock
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
